feature: working with anchor

--- a/aula05.html
+++ b/aula05.html
@@ -14,9 +14,12 @@
       <h2>Logomarca</h2>
     </div>
     <div>
-      <span>Home</span>
-      <span>Sobre</span>
-      <span>Contato</span>
+      <!-- Open new tab -->
+      <a href="https://www.google.com.br/?hl=pt-BR" target="_blank">Home</a>
+      <!-- Open same tab -->
+      <a href="https://www.google.com.br/?hl=pt-BR" target="_self">Sobre</a>
+      <!-- Open top tab -->
+      <a href="https://www.google.com.br/?hl=pt-BR" target="_top">Contato</a>
     </div>
   </section>
 
