feature: creating and perfom elements using class and ids

--- a/CSS_MODERNO/index.html
+++ b/CSS_MODERNO/index.html
@@ -10,5 +10,20 @@
     <section>
         <div><h2>Bad Boys</h2></div>
     </section>
+
+    <!-- Classes (css) and Ids (js) -->
+     <section>
+        <div>
+            <h2 class="movie-title">Bad Boys 2</h2>
+        </div>
+        <div>
+            <h2 id="movie-title">Bad Boys 3</h2>
+        </div>
+     </section>
+     <script>
+         const movieTitleId = document.getElementById('movie-title');
+         movieTitleId.style.color = 'blue';
+         movieTitleId.style.fontSize = '30px';
+     </script>
 </body>
 </html>
