feature: creating attributes

--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -8,18 +8,29 @@
 </head>
 <body>
     <section>
-        <div><h2>Bad Boys</h2></div>
+        <div><h2>Bad Boys (1995)</h2></div>
     </section>
 
     <!-- Classes (css) and Ids (js) -->
      <section>
         <div>
-            <h2 class="movie-title">Bad Boys 2</h2>
+            <h2 class="movie-title">Bad Boys 2 (2003)</h2>
         </div>
         <div>
-            <h2 id="movie-title">Bad Boys 3</h2>
+            <h2 id="movie-title">Bad Boys Para Sempre (2020)</h2>
         </div>
      </section>
+
+     <!-- Personalized attributes -->
+      <section>
+        <div>
+            <h4 filme="bad-boys">Bad Boys: Tudo ou Nada (2024)</h4>
+        </div>
+        <!-- Util for forms -->
+         <div>
+            <input type="button" value="Add Movie">
+         </div>
+      </section>
      <script>
          const movieTitleId = document.getElementById('movie-title');
          movieTitleId.style.color = 'blue';
