--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -31,6 +31,11 @@
             <input type="button" value="Add Movie">
          </div>
       </section>
+
+      <!-- Background image -->
+       <div class="bg">
+
+       </div>
      <script>
          const movieTitleId = document.getElementById('movie-title');
          movieTitleId.style.color = 'blue';
