--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -36,7 +36,7 @@
        <div class="bg">
        </div>
 
-       <!-- Dimensões -->
+       <!-- Dimensões (width, height, padding, margin, display) -->
         <section>
             <div class="div1">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
@@ -48,6 +48,35 @@
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
             </div>
         </section>
+
+        <!-- Flexbox -->
+         <section>
+            <div class="container1">
+                <div>
+                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
+                </div>
+                <div>
+                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
+                </div>
+                <div>
+                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
+                </div>
+            </div>
+         </section>
+
+         <section>
+            <div class="container2">
+                <div class="item1">
+                    <p>Item 1</p>
+                </div>
+                <div class="item2">
+                    <p>Item 2</p>
+                </div>
+                <div class="item3">
+                    <p>Item 3</p>
+                </div>
+            </div>
+         </section>
      <script>
          const movieTitleId = document.getElementById('movie-title');
          movieTitleId.style.color = 'blue';
