feature: niveis de importancia em css

--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -77,6 +77,11 @@
                 </div>
             </div>
          </section>
+
+         <!-- Nivel de Importancia -->
+          <div class="teste">
+            <h2 class="title">Will Smith</h2>
+          </div>
      <script>
          const movieTitleId = document.getElementById('movie-title');
          movieTitleId.style.color = 'blue';
