--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -1,91 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <div><h2>Bad Boys (1995)</h2></div>
-    </section>
+  <section>
+    <div>
+      <h2>Bad Boys (1995)</h2>
+    </div>
+  </section>
 
-    <!-- Classes (css) and Ids (js) -->
-     <section>
-        <div>
-            <h2 class="movie-title">Bad Boys 2 (2003)</h2>
-        </div>
-        <div>
-            <h2 id="movie-title">Bad Boys Para Sempre (2020)</h2>
-        </div>
-     </section>
+  <!-- Classes (css) and Ids (js) -->
+  <section>
+    <div>
+      <h2 class="movie-title">Bad Boys 2 (2003)</h2>
+    </div>
+    <div>
+      <h2 id="movie-title">Bad Boys Para Sempre (2020)</h2>
+    </div>
+  </section>
 
-     <!-- Personalized attributes -->
-      <section>
-        <div>
-            <h4 filme="bad-boys">Bad Boys: Tudo ou Nada (2024)</h4>
-        </div>
-        <!-- Util for forms -->
-         <div>
-            <input type="button" value="Add Movie">
-         </div>
-      </section>
+  <!-- Personalized attributes -->
+  <section>
+    <div>
+      <h4 filme="bad-boys">Bad Boys: Tudo ou Nada (2024)</h4>
+    </div>
+    <!-- Util for forms -->
+    <div>
+      <input type="button" value="Add Movie">
+    </div>
+  </section>
 
-      <!-- Background image -->
-       <div class="bg">
-       </div>
+  <!-- Background image -->
+  <div class="bg">
+  </div>
 
-       <!-- Dimensões (width, height, padding, margin, display) -->
-        <section>
-            <div class="div1">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-            </div>
-            <div class="div2">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-            </div>
-            <div class="div3">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-            </div>
-        </section>
+  <!-- Dimensões (width, height, padding, margin, display) -->
+  <section>
+    <div class="div1">
+      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+      form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a
+      passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+      the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
+      true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+      sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+      free from repetition, injected humour, or non-characteristic words etc.
+    </div>
+    <div class="div2">
+      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+      form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a
+      passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+      the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
+      true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+      sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+      free from repetition, injected humour, or non-characteristic words etc.
+    </div>
+    <div class="div3">
+      There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+      form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a
+      passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+      the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
+      true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+      sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+      free from repetition, injected humour, or non-characteristic words etc.
+    </div>
+  </section>
 
-        <!-- Flexbox -->
-         <section>
-            <div class="container1">
-                <div>
-                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
-                </div>
-                <div>
-                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
-                </div>
-                <div>
-                    <img src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg" alt="Will Smith">
-                </div>
-            </div>
-         </section>
+  <!-- Flexbox -->
+  <section>
+    <div class="container1">
+      <div>
+        <img
+          src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg"
+          alt="Will Smith">
+      </div>
+      <div>
+        <img
+          src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg"
+          alt="Will Smith">
+      </div>
+      <div>
+        <img
+          src="https://s2-gshow.glbimg.com/BQN1poa_fVR-Vqgf_yAy13dDlZE=/339x0:577x424/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2021/E/C/RA4qu5RhW59ad8fXlgTQ/will-smith-lanca-linha-de-roupas-inspirada-em-um-maluco-no-pedaco-1.jpg"
+          alt="Will Smith">
+      </div>
+    </div>
+  </section>
 
-         <section>
-            <div class="container2">
-                <div class="item1">
-                    <p>Item 1</p>
-                </div>
-                <div class="item2">
-                    <p>Item 2</p>
-                </div>
-                <div class="item3">
-                    <p>Item 3</p>
-                </div>
-            </div>
-         </section>
+  <section>
+    <div class="container2">
+      <div class="item1">
+        <p>Item 1</p>
+      </div>
+      <div class="item2">
+        <p>Item 2</p>
+      </div>
+      <div class="item3">
+        <p>Item 3</p>
+      </div>
+    </div>
+  </section>
 
-         <!-- Nivel de Importancia -->
-          <div class="teste">
-            <h2 class="title">Will Smith</h2>
-          </div>
-     <script>
-         const movieTitleId = document.getElementById('movie-title');
-         movieTitleId.style.color = 'blue';
-         movieTitleId.style.fontSize = '30px';
-     </script>
+  <!-- Nivel de Importancia -->
+  <div class="teste">
+    <h2 class="title">Will Smith</h2>
+  </div>
+
+  <!-- Animations -->
+  <div class="animation">
+    <h2>Will Smith</h2>
+  </div>
+  <script>
+    const movieTitleId = document.getElementById('movie-title');
+    movieTitleId.style.color = 'blue';
+    movieTitleId.style.fontSize = '30px';
+  </script>
 </body>
+
 </html>
