feature: media query

--- a/CSS_MODERNO/index_important.html
+++ b/CSS_MODERNO/index_important.html
@@ -115,6 +115,11 @@
   <div class="animation">
     <h2>Will Smith</h2>
   </div>
+
+  <!-- Variables -->
+   <div class="variables">
+    <h2>Amber Heard</h2>
+   </div>
   <script>
     const movieTitleId = document.getElementById('movie-title');
     movieTitleId.style.color = 'blue';
