--- a/DESIGN_RESPONSIVO/index.html
+++ b/DESIGN_RESPONSIVO/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
 </body>
 </html>
