feature: adicionando section porque-nos

--- a/PROJETO_FINAL/index.html
+++ b/PROJETO_FINAL/index.html
@@ -39,6 +39,40 @@
       <img src="./images/mockup.svg" alt="">
     </div>
   </section>
+
+  <section class="marcas">
+    <div class="center">
+      <img src="./images/LOGO1.png" alt="">
+      <img src="./images/LOGO2.png" alt="">
+      <img src="./images/LOGO3.png" alt="">
+      <img src="./images/LOGO4.png" alt="">
+      <img src="./images/LOGO5.png" alt="">
+    </div>
+  </section>
+
+  <section class="porque-nos">
+    <div class="center">
+      <h2>Por que nós?</h2>
+      <p>Uma experiência única e personalizada para cada cliente.</p>
+      <div class="diferenciais">
+        <div class="box-diferencial">
+          <img src="./images/icon1.svg" alt="">
+          <h3>Planejamento Impecável</h3>
+          <p>Conte com a Agência Bold no planejamento de seus projetos, conteúdos e estratégias.</p>
+        </div>
+        <div class="box-diferencial">
+          <img src="./images/icon2.svg" alt="">
+          <h3>Planejamento Impecável</h3>
+          <p>Conte com a Agência Bold no planejamento de seus projetos, conteúdos e estratégias.</p>
+        </div>
+        <div class="box-diferencial">
+          <img src="./images/icon3.svg" alt="">
+          <h3>Planejamento Impecável</h3>
+          <p>Conte com a Agência Bold no planejamento de seus projetos, conteúdos e estratégias.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
